--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -15,25 +14,12 @@
         scroll-behavior: smooth;
         background-color: #F9FAFB;
       }
-      .bg-soft-gray {
-        background-color: #F8F9FA;
-      }
-      .hero-gradient {
-        background: radial-gradient(circle at 50% -20%, #eff6ff 0%, #f9fafb 50%);
-      }
-      .green-accent {
-        color: #0B3B2C;
-      }
-      .bg-deep-green {
-        background-color: #0B3B2C;
-      }
-      .card-shadow {
-        box-shadow: 0 4px 20px -2px rgba(0, 0, 0, 0.05);
-      }
-      .pill-status {
-        background: rgba(11, 59, 44, 0.8);
-        backdrop-filter: blur(8px);
-      }
+      .bg-soft-gray { background-color: #F8F9FA; }
+      .hero-gradient { background: radial-gradient(circle at 50% -20%, #eff6ff 0%, #f9fafb 50%); }
+      .green-accent { color: #0B3B2C; }
+      .bg-deep-green { background-color: #0B3B2C; }
+      .card-shadow { box-shadow: 0 4px 20px -2px rgba(0, 0, 0, 0.05); }
+      .pill-status { background: rgba(11, 59, 44, 0.8); backdrop-filter: blur(8px); }
     </style>
     <script type="importmap">
     {
@@ -48,5 +34,6 @@
   </head>
   <body>
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
