--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -8,32 +9,58 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <!-- Google Identity Services for OAuth2 -->
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
     <style>
       body {
         font-family: 'Plus Jakarta Sans', sans-serif;
         scroll-behavior: smooth;
         background-color: #F9FAFB;
       }
-      .bg-soft-gray { background-color: #F8F9FA; }
-      .hero-gradient { background: radial-gradient(circle at 50% -20%, #eff6ff 0%, #f9fafb 50%); }
-      .green-accent { color: #0B3B2C; }
-      .bg-deep-green { background-color: #0B3B2C; }
-      .card-shadow { box-shadow: 0 4px 20px -2px rgba(0, 0, 0, 0.05); }
-      .pill-status { background: rgba(11, 59, 44, 0.8); backdrop-filter: blur(8px); }
+      .bg-soft-gray {
+        background-color: #F8F9FA;
+      }
+      .hero-gradient {
+        background: radial-gradient(circle at 50% -20%, #eff6ff 0%, #f9fafb 50%);
+      }
+      .green-accent {
+        color: #0B3B2C;
+      }
+      .bg-deep-green {
+        background-color: #0B3B2C;
+      }
+      .card-shadow {
+        box-shadow: 0 4px 20px -2px rgba(0, 0, 0, 0.05);
+      }
+      .pill-status {
+        background: rgba(11, 59, 44, 0.8);
+        backdrop-filter: blur(8px);
+      }
+      .custom-scrollbar::-webkit-scrollbar {
+        width: 4px;
+      }
+      .custom-scrollbar::-webkit-scrollbar-track {
+        background: transparent;
+      }
+      .custom-scrollbar::-webkit-scrollbar-thumb {
+        background: #e5e7eb;
+        border-radius: 10px;
+      }
     </style>
     <script type="importmap">
-    {
-      "imports": {
-        "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
-        "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-        "react/": "https://esm.sh/react@^19.2.3/",
-        "react": "https://esm.sh/react@^19.2.3"
-      }
-    }
-    </script>
+{
+  "imports": {
+    "lucide-react": "https://esm.sh/lucide-react@0.468.0",
+    "react": "https://esm.sh/react@19.0.0",
+    "react-dom": "https://esm.sh/react-dom@19.0.0",
+    "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
+    "react/": "https://esm.sh/react@^19.2.3/",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/"
+  }
+}
+</script>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
